@startuml
skinparam classAttributeIconSize 0
scale 4096 width
title 选择性搜索算法

segmentation.GraphSegmentation <.. segmentation.SelectiveSearchSegmentation

segmentation.SelectiveSearchSegmentationStrategy <.. segmentation.SelectiveSearchSegmentation

segmentation.SelectiveSearchSegmentation <|-- segmentation.SelectiveSearchSegmentationImpl

segmentation.Region <|-- segmentation.SelectiveSearchSegmentationImpl

segmentation.Neighbour <|-- segmentation.SelectiveSearchSegmentationImpl

class segmentation.SelectiveSearchSegmentation {
    + virtual void setBaseImage(cv::InputArray img) = 0
    + virtual void switchToSingleStrategy(int k = 200, float sigma = 0.8f) = 0
    + virtual void switchToSelectiveSearchFast(int base_k = 150, int inc_k = 150, float sigma = 0.8f) = 0
    + virtual void switchToSelectiveSearchQuality(int base_k = 150, int inc_k = 150, float sigma = 0.8f) = 0
    + virtual void addImage(cv::InputArray img) = 0
    + virtual void clearImages() = 0
    + virtual void addGraphSegmentation(std::shared_ptr<GraphSegmentation> g) = 0
    + virtual void clearGraphSegmentations() = 0
    + virtual void addStrategy(std::shared_ptr<SelectiveSearchSegmentationStrategy> s) = 0
    + virtual void process(std::vector<cv::Rect> &rects) = 0
}

class segmentation.SelectiveSearchSegmentationImpl {
    - std::string name_
    - cv::Mat base_image
    - std::vector<cv::Mat> images
    - std::vector<std::shared_ptr<GraphSegmentation> > segmentations
    - std::vector<std::shared_ptr<SelectiveSearchSegmentationStrategy> > strategies
    __
    - void hierarchicalGrouping()
    .. constructor ..
    + SelectiveSearchSegmentationImpl()
    .. override ..
    + virtual void setBaseImage(cv::InputArray img) override
    + virtual void switchToSingleStrategy(int k = 200, float sigma = 0.8f) override
    + virtual void switchToSelectiveSearchFast(int base_k = 150, int inc_k = 150, float sigma = 0.8f) override
    + virtual void switchToSelectiveSearchQuality(int base_k = 150, int inc_k = 150, float sigma = 0.8f) override
    + virtual void addImage(cv::InputArray img) override
    + virtual void clearImages() override
    + virtual void addGraphSegmentation(std::shared_ptr<GraphSegmentation> g) override
    + virtual void clearGraphSegmentations() override
    + virtual void addStrategy(std::shared_ptr<SelectiveSearchSegmentationStrategy> s) override
    + virtual void process(std::vector<cv::Rect> &rects) override
}

class segmentation.Region {
    + int id
    + int level
    + int merged_to
    + double rank
    + cv::Rect bounding_box

    + Region()
    + friend std::ostream &operator<<(std::ostream &os, const Region &n)
    + bool operator<(const Region &n) const
}

class segmentation.Neighbour {
    + int from
    + int to
    + float similarity

    + friend std::ostream &operator<<(std::ostream &os, const Neighbour &n)
    + bool operator<(const Neighbour &n) const
}

@enduml